--- a/Code.ipynb
+++ b/Code.ipynb
@@ -148,24 +148,88 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[2], line 5\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mnumpy\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mnp\u001b[39;00m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;66;03m# Loading the dataset\u001b[39;00m\n\u001b[1;32m----> 5\u001b[0m df \u001b[38;5;241m=\u001b[39m \u001b[43mpd\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mread_csv\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mquestions.csv\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m  \n\u001b[0;32m      7\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m=== FAST DATA PREPARATION ===\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m      9\u001b[0m \u001b[38;5;66;03m# Step 2.1: Basic Cleaning\u001b[39;00m\n",
-      "File \u001b[1;32mc:\\Users\\hadia\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages\\pandas\\io\\parsers\\readers.py:1026\u001b[0m, in \u001b[0;36mread_csv\u001b[1;34m(filepath_or_buffer, sep, delimiter, header, names, index_col, usecols, dtype, engine, converters, true_values, false_values, skipinitialspace, skiprows, skipfooter, nrows, na_values, keep_default_na, na_filter, verbose, skip_blank_lines, parse_dates, infer_datetime_format, keep_date_col, date_parser, date_format, dayfirst, cache_dates, iterator, chunksize, compression, thousands, decimal, lineterminator, quotechar, quoting, doublequote, escapechar, comment, encoding, encoding_errors, dialect, on_bad_lines, delim_whitespace, low_memory, memory_map, float_precision, storage_options, dtype_backend)\u001b[0m\n\u001b[0;32m   1013\u001b[0m kwds_defaults \u001b[38;5;241m=\u001b[39m _refine_defaults_read(\n\u001b[0;32m   1014\u001b[0m     dialect,\n\u001b[0;32m   1015\u001b[0m     delimiter,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m   1022\u001b[0m     dtype_backend\u001b[38;5;241m=\u001b[39mdtype_backend,\n\u001b[0;32m   1023\u001b[0m )\n\u001b[0;32m   1024\u001b[0m kwds\u001b[38;5;241m.\u001b[39mupdate(kwds_defaults)\n\u001b[1;32m-> 1026\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43m_read\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfilepath_or_buffer\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mkwds\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32mc:\\Users\\hadia\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages\\pandas\\io\\parsers\\readers.py:626\u001b[0m, in \u001b[0;36m_read\u001b[1;34m(filepath_or_buffer, kwds)\u001b[0m\n\u001b[0;32m    623\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m parser\n\u001b[0;32m    625\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m parser:\n\u001b[1;32m--> 626\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mparser\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mread\u001b[49m\u001b[43m(\u001b[49m\u001b[43mnrows\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32mc:\\Users\\hadia\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages\\pandas\\io\\parsers\\readers.py:1923\u001b[0m, in \u001b[0;36mTextFileReader.read\u001b[1;34m(self, nrows)\u001b[0m\n\u001b[0;32m   1916\u001b[0m nrows \u001b[38;5;241m=\u001b[39m validate_integer(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mnrows\u001b[39m\u001b[38;5;124m\"\u001b[39m, nrows)\n\u001b[0;32m   1917\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m   1918\u001b[0m     \u001b[38;5;66;03m# error: \"ParserBase\" has no attribute \"read\"\u001b[39;00m\n\u001b[0;32m   1919\u001b[0m     (\n\u001b[0;32m   1920\u001b[0m         index,\n\u001b[0;32m   1921\u001b[0m         columns,\n\u001b[0;32m   1922\u001b[0m         col_dict,\n\u001b[1;32m-> 1923\u001b[0m     ) \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_engine\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mread\u001b[49m\u001b[43m(\u001b[49m\u001b[43m  \u001b[49m\u001b[38;5;66;43;03m# type: ignore[attr-defined]\u001b[39;49;00m\n\u001b[0;32m   1924\u001b[0m \u001b[43m        \u001b[49m\u001b[43mnrows\u001b[49m\n\u001b[0;32m   1925\u001b[0m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   1926\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m:\n\u001b[0;32m   1927\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mclose()\n",
-      "File \u001b[1;32mc:\\Users\\hadia\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages\\pandas\\io\\parsers\\c_parser_wrapper.py:234\u001b[0m, in \u001b[0;36mCParserWrapper.read\u001b[1;34m(self, nrows)\u001b[0m\n\u001b[0;32m    232\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m    233\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mlow_memory:\n\u001b[1;32m--> 234\u001b[0m         chunks \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_reader\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mread_low_memory\u001b[49m\u001b[43m(\u001b[49m\u001b[43mnrows\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    235\u001b[0m         \u001b[38;5;66;03m# destructive to chunks\u001b[39;00m\n\u001b[0;32m    236\u001b[0m         data \u001b[38;5;241m=\u001b[39m _concatenate_chunks(chunks)\n",
-      "File \u001b[1;32mparsers.pyx:838\u001b[0m, in \u001b[0;36mpandas._libs.parsers.TextReader.read_low_memory\u001b[1;34m()\u001b[0m\n",
-      "File \u001b[1;32mparsers.pyx:905\u001b[0m, in \u001b[0;36mpandas._libs.parsers.TextReader._read_rows\u001b[1;34m()\u001b[0m\n",
-      "File \u001b[1;32mparsers.pyx:874\u001b[0m, in \u001b[0;36mpandas._libs.parsers.TextReader._tokenize_rows\u001b[1;34m()\u001b[0m\n",
-      "File \u001b[1;32mparsers.pyx:891\u001b[0m, in \u001b[0;36mpandas._libs.parsers.TextReader._check_tokenize_status\u001b[1;34m()\u001b[0m\n",
-      "File \u001b[1;32mparsers.pyx:2053\u001b[0m, in \u001b[0;36mpandas._libs.parsers.raise_parser_error\u001b[1;34m()\u001b[0m\n",
-      "File \u001b[1;32m<frozen codecs>:334\u001b[0m, in \u001b[0;36mgetstate\u001b[1;34m(self)\u001b[0m\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== FAST DATA PREPARATION ===\n",
+      "1. Cleaning the data...\n",
+      "Removed 3 rows with missing questions\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\hadia\\AppData\\Local\\Temp\\ipykernel_2928\\2546153254.py:15: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df_clean['question1'] = df_clean['question1'].astype(str)\n",
+      "C:\\Users\\hadia\\AppData\\Local\\Temp\\ipykernel_2928\\2546153254.py:16: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df_clean['question2'] = df_clean['question2'].astype(str)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "2. Extracting unique questions (FAST method)...\n",
+      "Total unique questions found: 537386\n",
+      "\n",
+      "3. Creating questions database...\n",
+      "Database shape: (537386, 4)\n",
+      "\n",
+      "Sample questions:\n",
+      "   question_id                                      question_text  \\\n",
+      "0            0  What is the step by step guide to invest in sh...   \n",
+      "1            1  What is the story of Kohinoor (Koh-i-Noor) Dia...   \n",
+      "2            2  How can I increase the speed of my internet co...   \n",
+      "3            3  Why am I mentally very lonely? How can I solve...   \n",
+      "4            4  Which one dissolve in water quikly sugar, salt...   \n",
+      "5            5  Astrology: I am a Capricorn Sun Cap moon and c...   \n",
+      "6            6                                Should I buy tiago?   \n",
+      "7            7                     How can I be a good geologist?   \n",
+      "8            8                    When do you use シ instead of し?   \n",
+      "9            9  Motorola (company): Can I hack my Charter Moto...   \n",
+      "\n",
+      "   question_length  word_count  \n",
+      "0               66          14  \n",
+      "1               51           8  \n",
+      "2               73          14  \n",
+      "3               50          11  \n",
+      "4               76          13  \n",
+      "5               86          16  \n",
+      "6               19           4  \n",
+      "7               30           7  \n",
+      "8               31           8  \n",
+      "9               60           9  \n",
+      "\n",
+      "4. Saving files...\n",
+      "Saved unique questions to 'unique_questions.csv'\n",
+      "Created sample dataset with 1000 questions\n",
+      "\n",
+      "=== DATASET STATISTICS ===\n",
+      "Original dataset: 404,351 question pairs\n",
+      "After cleaning: 404,348 question pairs\n",
+      "Unique questions: 537,386\n",
+      "Average question length: 61.9 characters\n",
+      "Average word count: 11.4 words\n",
+      "Shortest question: 1 characters\n",
+      "Longest question: 1169 characters\n",
+      "\n",
+      "=== EXAMPLE QUESTIONS ===\n",
+      "Short: Should I buy tiago?\n",
+      "Medium: What is the step by step guide to invest in share market in india?\n",
+      "Long: What are the best associate product manager (APM) programs that someone in their early 20s can join to learn product management and have a rewarding career in the company?\n",
+      "Data cleaned and prepared\n",
+      "Unique questions database created\n",
+      "Files saved successfully\n"
      ]
     }
    ],
@@ -276,7 +340,34 @@
    "execution_count": null,
    "id": "0cdd10e9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== SBERT EMBEDDINGS GENERATION ===\n",
+      "1. Loading SBERT model...\n",
+      "Model loaded: SentenceTransformer(\n",
+      "  (0): Transformer({'max_seq_length': 256, 'do_lower_case': False}) with Transformer model: BertModel \n",
+      "  (1): Pooling({'word_embedding_dimension': 384, 'pooling_mode_cls_token': False, 'pooling_mode_mean_tokens': True, 'pooling_mode_max_tokens': False, 'pooling_mode_mean_sqrt_len_tokens': False, 'pooling_mode_weightedmean_tokens': False, 'pooling_mode_lasttoken': False, 'include_prompt': True})\n",
+      "  (2): Normalize()\n",
+      ")\n",
+      "\n",
+      "2. Loading questions...\n",
+      "Loaded 537,386 unique questions\n",
+      "Processing 10,000 questions\n",
+      "\n",
+      "3. Generating SBERT embeddings...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Generating embeddings:   5%|▌         | 1/20 [00:05<01:40,  5.28s/it]"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -378,10 +469,139 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "546881cd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== LOADING SIMILARITY SEARCH SYSTEM ===\n",
+      "1. Loading embeddings...\n",
+      "✓ Loaded embeddings: (20000, 384)\n",
+      "2. Loading questions...\n",
+      "✓ Loaded 20,000 questions\n",
+      "3. Loading SBERT model...\n",
+      "✓ Model loaded\n",
+      "✓ Metadata loaded\n",
+      "✓ System ready for similarity search!\n",
+      "\n",
+      "====================================================================================================\n",
+      "TESTING SIMILARITY SEARCH\n",
+      "====================================================================================================\n",
+      "\n",
+      "=== FINDING SIMILAR QUESTIONS ===\n",
+      "Query: 'How can I make money online?'\n",
+      "✓ Search completed in 0.1271 seconds\n",
+      "✓ Found 5 similar questions above threshold (0.8)\n",
+      "\n",
+      "================================================================================\n",
+      "SIMILAR QUESTIONS FOUND:\n",
+      "================================================================================\n",
+      "\n",
+      "Rank 1 | Similarity: 0.9851\n",
+      "Question: How can one make money online?\n",
+      "------------------------------------------------------------\n",
+      "\n",
+      "Rank 2 | Similarity: 0.9653\n",
+      "Question: How do you make money online?\n",
+      "------------------------------------------------------------\n",
+      "\n",
+      "Rank 3 | Similarity: 0.9636\n",
+      "Question: What is a way to make money online?\n",
+      "------------------------------------------------------------\n",
+      "\n",
+      "Rank 4 | Similarity: 0.9623\n",
+      "Question: What are ways I can make money online?\n",
+      "------------------------------------------------------------\n",
+      "\n",
+      "Rank 5 | Similarity: 0.9593\n",
+      "Question: How can I make money online for job?\n",
+      "------------------------------------------------------------\n",
+      "\n",
+      "====================================================================================================\n",
+      "\n",
+      "=== FINDING SIMILAR QUESTIONS ===\n",
+      "Query: 'What is machine learning?'\n",
+      "✓ Search completed in 0.0836 seconds\n",
+      "✓ Found 0 similar questions above threshold (0.8)\n",
+      "No similar questions found above the threshold.\n",
+      "\n",
+      "====================================================================================================\n",
+      "\n",
+      "=== FINDING SIMILAR QUESTIONS ===\n",
+      "Query: 'How to learn Python programming?'\n",
+      "✓ Search completed in 0.0927 seconds\n",
+      "✓ Found 5 similar questions above threshold (0.8)\n",
+      "\n",
+      "================================================================================\n",
+      "SIMILAR QUESTIONS FOUND:\n",
+      "================================================================================\n",
+      "\n",
+      "Rank 1 | Similarity: 0.9105\n",
+      "Question: How should I begin learning Python?\n",
+      "------------------------------------------------------------\n",
+      "\n",
+      "Rank 2 | Similarity: 0.9005\n",
+      "Question: How should I start learning Python?\n",
+      "------------------------------------------------------------\n",
+      "\n",
+      "Rank 3 | Similarity: 0.8895\n",
+      "Question: What's the best way to learn Python?\n",
+      "------------------------------------------------------------\n",
+      "\n",
+      "Rank 4 | Similarity: 0.8793\n",
+      "Question: What are some of the best ways to learn python?\n",
+      "------------------------------------------------------------\n",
+      "\n",
+      "Rank 5 | Similarity: 0.8707\n",
+      "Question: How do I learn Python systematically?\n",
+      "------------------------------------------------------------\n",
+      "\n",
+      "====================================================================================================\n",
+      "\n",
+      "=== FINDING SIMILAR QUESTIONS ===\n",
+      "Query: 'What are the best ways to invest money?'\n",
+      "✓ Search completed in 0.0724 seconds\n",
+      "✓ Found 0 similar questions above threshold (0.8)\n",
+      "No similar questions found above the threshold.\n",
+      "\n",
+      "====================================================================================================\n",
+      "\n",
+      "=== FINDING SIMILAR QUESTIONS ===\n",
+      "Query: 'How can I lose weight fast?'\n",
+      "✓ Search completed in 0.0871 seconds\n",
+      "✓ Found 5 similar questions above threshold (0.8)\n",
+      "\n",
+      "================================================================================\n",
+      "SIMILAR QUESTIONS FOUND:\n",
+      "================================================================================\n",
+      "\n",
+      "Rank 1 | Similarity: 0.9862\n",
+      "Question: How do I lose weight fast?\n",
+      "------------------------------------------------------------\n",
+      "\n",
+      "Rank 2 | Similarity: 0.9329\n",
+      "Question: How can I lose weight quickly?\n",
+      "------------------------------------------------------------\n",
+      "\n",
+      "Rank 3 | Similarity: 0.9314\n",
+      "Question: What are some ways to lose weight fast?\n",
+      "------------------------------------------------------------\n",
+      "\n",
+      "Rank 4 | Similarity: 0.9264\n",
+      "Question: What are the best ways to lose weight fast?\n",
+      "------------------------------------------------------------\n",
+      "\n",
+      "Rank 5 | Similarity: 0.9133\n",
+      "Question: How do I loose weight fast?\n",
+      "------------------------------------------------------------\n",
+      "\n",
+      "====================================================================================================\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -628,7 +848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "1a62c542",
    "metadata": {},
    "outputs": [
@@ -647,7 +867,7 @@
       "Processing 1000 question pairs...\n",
       "Processed 100 pairs...\n",
       "Processed 600 pairs...\n",
-      "✓ Predictions completed in 21.24 seconds\n",
+      "✓ Predictions completed in 24.29 seconds\n",
       "\n",
       "=== FINDING OPTIMAL THRESHOLD ===\n",
       "✓ Optimal threshold: 0.700\n",
