--- a/FinalCode.ipynb
+++ b/FinalCode.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "98b9e605",
    "metadata": {},
    "outputs": [],
@@ -32,10 +32,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "771ca218",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\fatim\\AppData\\Local\\Temp\\ipykernel_10884\\3560515028.py:10: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df_clean['question1'] = df_clean['question1'].astype(str)\n",
+      "C:\\Users\\fatim\\AppData\\Local\\Temp\\ipykernel_10884\\3560515028.py:11: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df_clean['question2'] = df_clean['question2'].astype(str)\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "\n",
@@ -83,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "0cdd10e9",
    "metadata": {},
    "outputs": [],
@@ -156,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "546881cd",
    "metadata": {},
    "outputs": [
@@ -314,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 8,
    "id": "5321b897",
    "metadata": {},
    "outputs": [
@@ -398,7 +417,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5eed9f35fb714001bd16edeaa712a263",
+       "model_id": "b42f4bb16c834ceab8b4c8ff56d10cf9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -603,32 +622,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 9,
    "id": "63e09b49",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "=== FINDING SIMILAR QUESTIONS ===\n",
-      "Query: 'hows axasixn'\n",
-      "✓ Search completed in 0.0662 seconds\n",
-      "✓ Found 0 similar questions above threshold (0.7)\n",
-      "\n",
-      "=== FINDING SIMILAR QUESTIONS ===\n",
-      "Query: 'pakistan?'\n",
-      "✓ Search completed in 0.0595 seconds\n",
-      "✓ Found 0 similar questions above threshold (0.7)\n",
-      "\n",
-      "=== FINDING SIMILAR QUESTIONS ===\n",
-      "Query: 'what you do for living?'\n",
-      "✓ Search completed in 0.1168 seconds\n",
-      "✓ Found 1 similar questions above threshold (0.7)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import tkinter as tk\n",
     "from tkinter import messagebox, scrolledtext\n",
