Hopefuly last push of the day

--- a/FinalCode.ipynb
+++ b/FinalCode.ipynb
@@ -155,20 +155,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "546881cd",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Please enter a valid question.\n",
-      "Please enter a valid question.\n",
-      "Please enter a valid question.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -267,299 +257,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c95ff0dd",
+   "id": "422ea538",
    "metadata": {},
    "source": [
-    "# *Main output Cell*"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "5321b897",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "<style>\n",
-       "    @keyframes fadeIn {\n",
-       "        from { opacity: 0; transform: translateY(10px); }\n",
-       "        to { opacity: 1; transform: translateY(0); }\n",
-       "    }\n",
-       "\n",
-       "    .output-container {\n",
-       "        border: 2px solid #4CAF50;\n",
-       "        background-color: #f6fff6;\n",
-       "        padding: 20px;\n",
-       "        border-radius: 15px;\n",
-       "        box-shadow: 2px 2px 10px rgba(0,0,0,0.2);\n",
-       "        font-family: \"Segoe UI\", sans-serif;\n",
-       "        color: #333;\n",
-       "        max-height: 400px;\n",
-       "        overflow-y: auto;\n",
-       "        animation: fadeIn 0.6s ease-in-out;\n",
-       "    }\n",
-       "\n",
-       "    .question-box {\n",
-       "        margin-top: 10px;\n",
-       "        padding: 10px;\n",
-       "        background-color: #ffffff;\n",
-       "        border: 1px solid #ddd;\n",
-       "        border-radius: 10px;\n",
-       "        animation: fadeIn 0.5s ease-in-out;\n",
-       "    }\n",
-       "\n",
-       "    .question-box:hover {\n",
-       "        background-color: #f0f0f0;\n",
-       "        transition: background-color 0.3s ease-in-out;\n",
-       "    }\n",
-       "\n",
-       "    .rank {\n",
-       "        font-weight: bold;\n",
-       "        color: #2c7;\n",
-       "    }\n",
-       "\n",
-       "    .score {\n",
-       "        color: #888;\n",
-       "    }\n",
-       "\n",
-       "    .gif-box {\n",
-       "        text-align: center;\n",
-       "        margin-bottom: -15px;\n",
-       "    }\n",
-       "\n",
-       "    .widget-button {\n",
-       "        transition: all 0.3s ease;\n",
-       "        border-radius: 8px !important;\n",
-       "    }\n",
-       "\n",
-       "    .widget-button:hover {\n",
-       "        transform: scale(1.05);\n",
-       "        box-shadow: 0 4px 12px rgba(0,0,0,0.15);\n",
-       "    }\n",
-       "\n",
-       "    .center-buttons {\n",
-       "        display: flex;\n",
-       "        justify-content: center;\n",
-       "        gap: 20px;\n",
-       "        margin-top: 10px;\n",
-       "        margin-bottom: 10px;\n",
-       "    }\n",
-       "</style>\n"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "746baef5e5e14b89b84852954bf8ceea",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VBox(children=(HTML(value='\\n<div class=\\'gif-box\\'>\\n    <img src=\"assets/Astronaut with space shuttle.gif\" w…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "import ipywidgets as widgets\n",
-    "from IPython.display import display, clear_output, HTML\n",
-    "\n",
-    "# Load the finder class\n",
-    "finder = QuestionSimilarityFinder()\n",
-    "finder.load_data()\n",
-    "\n",
-    "# --- Custom CSS Styling ---\n",
-    "display(HTML(\"\"\"\n",
-    "<style>\n",
-    "    @keyframes fadeIn {\n",
-    "        from { opacity: 0; transform: translateY(10px); }\n",
-    "        to { opacity: 1; transform: translateY(0); }\n",
-    "    }\n",
-    "\n",
-    "    .output-container {\n",
-    "        border: 2px solid #4CAF50;\n",
-    "        background-color: #f6fff6;\n",
-    "        padding: 20px;\n",
-    "        border-radius: 15px;\n",
-    "        box-shadow: 2px 2px 10px rgba(0,0,0,0.2);\n",
-    "        font-family: \"Segoe UI\", sans-serif;\n",
-    "        color: #333;\n",
-    "        max-height: 400px;\n",
-    "        overflow-y: auto;\n",
-    "        animation: fadeIn 0.6s ease-in-out;\n",
-    "    }\n",
-    "\n",
-    "    .question-box {\n",
-    "        margin-top: 10px;\n",
-    "        padding: 10px;\n",
-    "        background-color: #ffffff;\n",
-    "        border: 1px solid #ddd;\n",
-    "        border-radius: 10px;\n",
-    "        animation: fadeIn 0.5s ease-in-out;\n",
-    "    }\n",
-    "\n",
-    "    .question-box:hover {\n",
-    "        background-color: #f0f0f0;\n",
-    "        transition: background-color 0.3s ease-in-out;\n",
-    "    }\n",
-    "\n",
-    "    .rank {\n",
-    "        font-weight: bold;\n",
-    "        color: #2c7;\n",
-    "    }\n",
-    "\n",
-    "    .score {\n",
-    "        color: #888;\n",
-    "    }\n",
-    "\n",
-    "    .gif-box {\n",
-    "        text-align: center;\n",
-    "        margin-bottom: -15px;\n",
-    "    }\n",
-    "\n",
-    "    .widget-button {\n",
-    "        transition: all 0.3s ease;\n",
-    "        border-radius: 8px !important;\n",
-    "    }\n",
-    "\n",
-    "    .widget-button:hover {\n",
-    "        transform: scale(1.05);\n",
-    "        box-shadow: 0 4px 12px rgba(0,0,0,0.15);\n",
-    "    }\n",
-    "\n",
-    "    .center-buttons {\n",
-    "        display: flex;\n",
-    "        justify-content: center;\n",
-    "        gap: 20px;\n",
-    "        margin-top: 10px;\n",
-    "        margin-bottom: 10px;\n",
-    "    }\n",
-    "</style>\n",
-    "\"\"\"))\n",
-    "\n",
-    "# --- Top GIF Display ---\n",
-    "gif_html = widgets.HTML(\"\"\"\n",
-    "<div class='gif-box'>\n",
-    "    <img src=\"assets/Astronaut with space shuttle.gif\" width=\"150\"/>\n",
-    "</div>\n",
-    "\"\"\")\n",
-    "\n",
-    "# --- Input Box ---\n",
-    "input_box = widgets.Text(\n",
-    "    placeholder='Type your question here...',\n",
-    "    layout=widgets.Layout(width='99%')\n",
-    ")\n",
-    "\n",
-    "# --- Search Button (Blue) ---\n",
-    "search_btn = widgets.Button(\n",
-    "    description='Search',\n",
-    "    icon='search',\n",
-    "    layout=widgets.Layout(width='100px')\n",
-    ")\n",
-    "search_btn.style.button_color = \"#165497\"\n",
-    "search_btn.style.font_weight = 'bold'\n",
-    "search_btn.style.font_size = '14px'\n",
-    "search_btn.style.text_color = 'white'\n",
-    "search_btn.add_class(\"widget-button\")\n",
-    "\n",
-    "# --- Clear Button (Red) ---\n",
-    "clear_btn = widgets.Button(\n",
-    "    description='Clear',\n",
-    "    icon='eraser',\n",
-    "    layout=widgets.Layout(width='100px')\n",
-    ")\n",
-    "clear_btn.style.button_color = '#DC3545'\n",
-    "clear_btn.style.font_weight = 'bold'\n",
-    "clear_btn.style.font_size = '14px'\n",
-    "clear_btn.add_class(\"widget-button\")\n",
-    "\n",
-    "# --- Output Box ---\n",
-    "output = widgets.Output()\n",
-    "\n",
-    "# --- Format Results Function ---\n",
-    "def format_results(results):\n",
-    "    if not results:\n",
-    "        return \"<div class='question-box'><b>⚠️ No similar questions found above threshold.</b></div>\"\n",
-    "    \n",
-    "    html = \"\"\n",
-    "    for result in results:\n",
-    "        html += f\"\"\"\n",
-    "        <div class='question-box'>\n",
-    "            <div class='rank'>Rank {result['rank']}</div>\n",
-    "            <div><b>Question:</b> {result['question_text']}</div>\n",
-    "            <div class='score'>Similarity: {result['similarity_score']:.4f}</div>\n",
-    "        </div>\n",
-    "        \"\"\"\n",
-    "    return html\n",
-    "\n",
-    "# --- Button Event Handlers ---\n",
-    "def on_search_click(b):\n",
-    "    with output:\n",
-    "        clear_output()\n",
-    "        query = input_box.value.strip()\n",
-    "        if not query:\n",
-    "            display(HTML(\"<div class='question-box'>⚠️ Please enter a valid question.</div>\"))\n",
-    "            return\n",
-    "        \n",
-    "        # Loading GIF\n",
-    "        display(HTML(\"\"\"\n",
-    "        <div class='question-box'>\n",
-    "            <img src=\"assets/Astronaut with space shuttle.gif\" width=\"40\" style=\"vertical-align:middle;\" />\n",
-    "            <span> Searching for similar questions...</span>\n",
-    "        </div>\n",
-    "        \"\"\"))\n",
-    "\n",
-    "        try:\n",
-    "            results = finder.find_similar_questions(\n",
-    "                query_question=query,\n",
-    "                top_k=5,\n",
-    "                similarity_threshold=0.7\n",
-    "            )\n",
-    "            clear_output()\n",
-    "            display(HTML(f\"<div class='output-container'>{format_results(results)}</div>\"))\n",
-    "        except Exception as e:\n",
-    "            clear_output()\n",
-    "            display(HTML(f\"<div class='question-box'>❌ Error: {str(e)}</div>\"))\n",
-    "\n",
-    "def on_clear_click(b):\n",
-    "    input_box.value = \"\"\n",
-    "    with output:\n",
-    "        clear_output()\n",
-    "\n",
-    "# --- Bind Buttons ---\n",
-    "search_btn.on_click(on_search_click)\n",
-    "clear_btn.on_click(on_clear_click)\n",
-    "\n",
-    "# --- Button Layout ---\n",
-    "button_box = widgets.HBox([search_btn, clear_btn])\n",
-    "button_box.add_class(\"center-buttons\")\n",
-    "\n",
-    "# --- Display the Full Interface ---\n",
-    "display(widgets.VBox([\n",
-    "    gif_html,\n",
-    "    input_box,\n",
-    "    button_box,\n",
-    "    output\n",
-    "]))\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "cf090834",
-   "metadata": {},
-   "source": [
-    "Doing awein ka window pop up (hehe not funny) looks kinda old as i think it works like this or maybe not!"
+    "# Output"
    ]
   },
   {
@@ -567,22 +268,7 @@
    "execution_count": 7,
    "id": "63e09b49",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: 'embeddings_metadata.pkl'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mFileNotFoundError\u001b[39m                         Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[7]\u001b[39m\u001b[32m, line 97\u001b[39m\n\u001b[32m     95\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[34m__name__\u001b[39m == \u001b[33m\"\u001b[39m\u001b[33m__main__\u001b[39m\u001b[33m\"\u001b[39m:\n\u001b[32m     96\u001b[39m     root = tk.Tk()\n\u001b[32m---> \u001b[39m\u001b[32m97\u001b[39m     app = \u001b[43mQuestionSimilarityFinderGUI\u001b[49m\u001b[43m(\u001b[49m\u001b[43mroot\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     98\u001b[39m     root.mainloop()\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[7]\u001b[39m\u001b[32m, line 15\u001b[39m, in \u001b[36mQuestionSimilarityFinderGUI.__init__\u001b[39m\u001b[34m(self, root)\u001b[39m\n\u001b[32m     12\u001b[39m \u001b[38;5;28mself\u001b[39m.root.configure(bg=\u001b[33m\"\u001b[39m\u001b[33m#f6fff6\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m     14\u001b[39m \u001b[38;5;28mself\u001b[39m.finder = QuestionSimilarityFinder()\n\u001b[32m---> \u001b[39m\u001b[32m15\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mfinder\u001b[49m\u001b[43m.\u001b[49m\u001b[43mload_data\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     17\u001b[39m \u001b[38;5;28mself\u001b[39m.create_widgets()\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[4]\u001b[39m\u001b[32m, line 28\u001b[39m, in \u001b[36mQuestionSimilarityFinder.load_data\u001b[39m\u001b[34m(self)\u001b[39m\n\u001b[32m     25\u001b[39m \u001b[38;5;28mself\u001b[39m.model = SentenceTransformer(\u001b[33m'\u001b[39m\u001b[33mall-MiniLM-L6-v2\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m     27\u001b[39m \u001b[38;5;66;03m# Load metadata\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m28\u001b[39m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43membeddings_metadata.pkl\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mrb\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mas\u001b[39;00m f:\n\u001b[32m     29\u001b[39m     \u001b[38;5;28mself\u001b[39m.metadata = pickle.load(f)\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~\\AppData\\Roaming\\Python\\Python313\\site-packages\\IPython\\core\\interactiveshell.py:326\u001b[39m, in \u001b[36m_modified_open\u001b[39m\u001b[34m(file, *args, **kwargs)\u001b[39m\n\u001b[32m    319\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m file \u001b[38;5;129;01min\u001b[39;00m {\u001b[32m0\u001b[39m, \u001b[32m1\u001b[39m, \u001b[32m2\u001b[39m}:\n\u001b[32m    320\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[32m    321\u001b[39m         \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mIPython won\u001b[39m\u001b[33m'\u001b[39m\u001b[33mt let you open fd=\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfile\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m by default \u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    322\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mas it is likely to crash IPython. If you know what you are doing, \u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    323\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33myou can use builtins\u001b[39m\u001b[33m'\u001b[39m\u001b[33m open.\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    324\u001b[39m     )\n\u001b[32m--> \u001b[39m\u001b[32m326\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mio_open\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfile\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[31mFileNotFoundError\u001b[39m: [Errno 2] No such file or directory: 'embeddings_metadata.pkl'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import tkinter as tk\n",
     "from tkinter import messagebox, scrolledtext\n",
